[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/Character Sprites/Npcs/misc/butterflies/0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/misc/butterfly.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=6]
radius = 1.03078

[sub_resource type="Animation" id=10]
resource_name = "Fly"
length = 0.333333
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=11]
length = 0.001

[sub_resource type="Animation" id=13]
resource_name = "Flying"
length = 5.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.3, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 2.6, 3.9 ),
"transitions": PoolRealArray( -1.2, -1.2, -1.2, -1.2 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 16, -16 ), Vector2( 0, -16 ), Vector2( -16, -16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.3, 3.5, 3.7, 3.9, 4.1, 4.3, 4.5, 4.6, 4.8, 5, 5.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, -6 ), Vector2( 0, -8 ), Vector2( 0, -8 ), Vector2( 0, -6 ), Vector2( 0, -3 ), Vector2( 0, 0 ), Vector2( 0, 3 ), Vector2( 0, 6 ), Vector2( 0, 8 ), Vector2( 0, 8 ), Vector2( 0, 6 ), Vector2( 0, 3 ), Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, -6 ), Vector2( 0, -8 ), Vector2( 0, -8 ), Vector2( 0, -6 ), Vector2( 0, -3 ), Vector2( 0, 0 ), Vector2( 0, 3 ), Vector2( 0, 6 ), Vector2( 0, 8 ), Vector2( 0, 8 ), Vector2( 0, 6 ), Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 7.75

[node name="butterfly" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fly = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Flying = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 2

[node name="MoveArea" type="Area2D" parent="Sprite"]
collision_layer = 4096
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/MoveArea"]
position = Vector2( 0.5, 0 )
scale = Vector2( 2, 2 )
shape = SubResource( 9 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 1.90735e-06, -16 )
scale = Vector2( 2.4, 1.6 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 1.90735e-06, -16 )
scale = Vector2( 2.4, 1.6 )
pause_particles = false
process_parent = true
physics_process_parent = true

[connection signal="body_entered" from="Sprite/MoveArea" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Sprite/MoveArea" to="." method="_on_Area_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
